# remote_desk

./: .gitignore  CMakeLists.txt  Makefile  README.md  admin_client  build.sh  relay_server  remote_agent
admin/: admin_client.cpp  admin_client.h  main.cpp
agent/: agent.cpp  agent.h  main.cpp
client/: client.cpp  client.h  main.cpp
common/: protocol.h
relay/: main.cpp  relay_server.cpp  relay_server.h
server/: main.cpp  server.cpp  server.h  shell_executor.cpp  shell_executor.h
